# create-chatgpt-app

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
create_chatgpt_app/: __init__.py  generator.py  models.py
create_chatgpt_app/cli/: __init__.py  main.py
create_chatgpt_app/templates/: Dockerfile.j2  README.md.j2  dockerignore.j2  gitignore.j2  main.py.j2  requirements.txt.j2  test_main.py.j2
