[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "create-chatgpt-app"
version = "0.1.3"
description = "A CLI tool to scaffold ChatGPT apps using OpenAI Apps SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Hemanth HM", email = "hemanth.hm@gmail.com"}
]
keywords = ["chatgpt", "openai", "mcp", "scaffold", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
create-chatgpt-app = "create_chatgpt_app.cli.main:cli"

[project.urls]
Homepage = "https://github.com/hemanth/create-chatgpt-app"
Documentation = "https://github.com/hemanth/create-chatgpt-app"
Repository = "https://github.com/hemanth/create-chatgpt-app"

[tool.setuptools.packages.find]
where = ["."]
include = ["create_chatgpt_app*"]

[tool.setuptools.package-data]
create_chatgpt_app = ["templates/**/*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
